# rust-experiment

./: .gitignore  Cargo.toml  README.md
crates/misc/: Cargo.toml
crates/misc/src/: planets.rs
hello_extism/: README.md
hello_extism/guest/: Cargo.toml
hello_extism/guest/src/: lib.rs
hello_extism/host/: Cargo.toml
hello_extism/host/src/: main.rs
hello_extism/shared/: Cargo.toml
hello_extism/shared/src/: lib.rs
hello_floem/: Cargo.toml  README.md  _Cargo.toml
hello_gpui/: Cargo.toml  README.md
hello_gpui/src/: main.rs
hello_macros/: Cargo.toml  README.md
hello_macros/declarative/: Cargo.toml  README.md
hello_macros/declarative/examples/: one.rs
hello_macros/declarative/src/: declarative.rs
hello_macros/examples/: declarative.rs
hello_macros/procedural/: Cargo.toml
hello_macros/procedural/src/: lib.rs
hello_macros/procedural/tests/: test.rs
hello_macros/src/: declarative.rs  lib.rs
playground/http_exp/: Cargo.toml
playground/http_exp/src/: main.rs
playground/shared_mem/: .gitignore  Cargo.toml  basic_mapping
playground/shared_mem/examples/: basic.rs  event.rs  mutex.rs
playground/simple_term/: Cargo.toml
playground/simple_term/src/: main.rs
plugins/: README.md
plugins/hello_guest/: Cargo.toml
plugins/hello_host/: Cargo.toml
plugins/hello_host/src/: main.rs
plugins/hello_ref/: Cargo.toml
plugins/hello_ref/src/: counter.rs  (+1 more)
src/: cmd.rs  file.rs  help.rs  main.rs  todo.rs
textview/: Cargo.toml  README.md
textview/examples/: hello.md  hello.rs
todo0/: Cargo.toml  README.md
todo0/src/: cmd.rs  help.rs
(+1 files in other folders)
