[package]
name = "hello_gpui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
# gpui = { path = "/Users/i/ws/clone/zed/crates/gpui" }

log = "0.4.20"
