[package]
name = "hello_gpui"
version = "0.1.0"
edition = "2021"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", tag = "v0.124.8" }
# gpui = { path = "/Users/i/ws/clone/zed/crates/gpui" }

log = "0.4.20"
misc = { version = "0.1.0", path = "../crates/misc" }
once_cell = "1.19.0"
