[package]
name = "hello_extism_guest"
version = "0.1.0"
edition = "2021"

[lib]
crate_type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
extism-convert = "1.1.0"
extism-pdk = "1.0.1"
serde = "1.0.197"
